修改了音乐。修复了is_home()的判定失误。源自于hexo的Cache机制。Refer_1:https://github.com/zhwangart/hexo-theme-ocean/issues/18  Refer_2:https://issuehunt.io/r/hexojs/hexo/issues/3738

--- a/themes/archer/layout/layout.ejs
+++ b/themes/archer/layout/layout.ejs
@@ -22,7 +22,7 @@
             <%- partial('_partial/base-profile') %>
             <% } %>
         </div>
-        <%- partial('_partial/base-footer', {}, {cache: true}) %>
+        <%- partial('_partial/base-footer', {}, {cache: false}) %>
     </div>
     <!-- toc -->
     <% if(is_post() && theme.toc) { %>
