--- a/themes/archer/layout/_partial/base-footer.ejs
+++ b/themes/archer/layout/_partial/base-footer.ejs
@@ -6,10 +6,20 @@
     </div>
     <% } %>
     <!-- powered by Hexo  -->
+
+    
+    <% if(is_home()) { %>
+    <div class="copyright">
+        <span id="hexo-power">Powered by <a href="https://hexo.io/" target="_blank">Hexo</a></span><span class="iconfont-archer power">&#xe635;</span><span id="theme-info">theme <a href="https://github.com/fi3ework/hexo-theme-archer" target="_blank">Archer</a></span><br>
+        <span><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=523035256&auto=1&height=66"></iframe></span>
+    </div>
+    <% } else { %>
     <div class="copyright">
         <span id="hexo-power">Powered by <a href="https://hexo.io/" target="_blank">Hexo</a></span><span class="iconfont-archer power">&#xe635;</span><span id="theme-info">theme <a href="https://github.com/fi3ework/hexo-theme-archer" target="_blank">Archer</a></span><br>
         <span><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=260 height=52 src="//music.163.com/outchain/player?type=2&id=507585639&auto=1&height=32"></iframe></span>
     </div>
+    <% } %>
+    
     
     <!-- 不蒜子  -->
     <% if (theme.busuanzi) { %>
