--- a/themes/archer/layout/_partial/base-footer.ejs
+++ b/themes/archer/layout/_partial/base-footer.ejs
@@ -1,4 +1,18 @@
 <footer class="footer footer-unloaded">
+    <script>
+        (function(){
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https') {
+                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+            }
+            else {
+                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp, s);
+        })();
+        </script>
     <!-- social  -->
     <% if(theme.social) { %>
     <div class="social">
