--- a/themes/archer/layout/_partial/base-footer.ejs
+++ b/themes/archer/layout/_partial/base-footer.ejs
@@ -25,7 +25,7 @@
     <% if(is_home()) { %>
     <div class="copyright">
         <span id="hexo-power">Powered by <a href="https://hexo.io/" target="_blank">Hexo</a></span><span class="iconfont-archer power">&#xe635;</span><span id="theme-info">theme <a href="https://github.com/fi3ework/hexo-theme-archer" target="_blank">Archer</a></span><br>
-        <span><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=590464&auto=1&height=66"></iframe></span>
+        <span><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1436614177&auto=0&height=66"></iframe></span>
     </div>
     <% } else if(page.layout === "about") { %>
         <div class="copyright">
