--- a/themes/archer/src/scss/_variables.scss
+++ b/themes/archer/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 // You can change the following by yourself :-)
 // ========== DIY ========== //
-$feature-color: #f75357;
+$feature-color: #5E3595;
 $code-theme: 'atom-one-dark'; // atom-one-dark or atom-one-light
 // ========== global variables ========== //
 $body-background-color: #fff;
